--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap');
+
 /* Center everything on the page */
 body {
     display: flex;
@@ -9,6 +11,7 @@ body {
     background-color: #56a5e6 !important;
     text-align: center;
     font-family: 'Comic Neue', cursive !important;
+    font-weight: 600;
 
 }
 
@@ -50,12 +53,12 @@ button {
 
 
 /* Responsive Design */
-@media (max-width: 600px) {
+@media (max-width: 300px) {
     .gif img {
-        max-width: 400px;
+        max-width: 200px;
     }
     button {
-        font-size: 1rem;
+        font-size: 0.8rem;
         padding: 8px 16px;
     }
 }
